@@ -6,13 +6,13 @@ Priority: optional
 Build-Depends:
  bison,
  cmake (>= 2.8),
-#sid stretch jessie wheezy saucy trusty utopic vivid# debhelper (>= 9),
+#sid stretch jessie wheezy saucy trusty utopic vivid wily# debhelper (>= 9),
 #precise# debhelper (>= 7),
  flex,
  grass-dev,
  libexpat1-dev,
  libfcgi-dev,
-#sid stretch jessie trusty utopic vivid# libgdal-dev (>= 1.10.1-0~),
+#sid stretch jessie trusty utopic vivid wily# libgdal-dev (>= 1.10.1-0~),
 #precise# libgdal-dev (>= 1.9.0) | libgdal1-dev (<< 1.9.0),
 #saucy# libgdal-dev (>= 1.9.0),
 #wheezy# libgdal1-dev,
@@ -23,24 +23,27 @@ Build-Depends:
  libproj-dev,
  libqt4-dev (>= 4.7.0),
  libqt4-opengl-dev,
- libqca2-dev, libqca2-plugin-ossl,
+ libqca2-dev,
+ libqca2-plugin-ossl,
  libqtwebkit-dev,
 #stretch jessie wheezy# libqwt-dev,
-#precise saucy trusty utopic vivid stretch sid# libqwt5-qt4-dev,
+#precise saucy trusty utopic vivid wily stretch sid# libqwt5-qt4-dev,
  libspatialite-dev,
  libsqlite3-dev,
  libspatialindex-dev,
  pkg-config,
  pyqt4-dev-tools,
  python-qscintilla2,
+ python-qt4 (>= 4.1.0),
+ python-qt4-dev,
+ python-qt4-sql,
 #precise saucy wheezy# python,
 #precise saucy# python-central (>= 0.5),
 #saucy wheezy# python-dev,
 #saucy# libpython2.7-dev,
-#sid stretch jessie trusty utopic vivid# python-all (>= 2.6.6-3~), python-all-dev (>= 2.6.6-3~),
-#sid stretch jessie wheezy precise saucy trusty utopic vivid# python-qt4 (>= 4.1.0), python-qt4-dev,
+#sid stretch jessie trusty utopic vivid wily# python-all (>= 2.6.6-3~), python-all-dev (>= 2.6.6-3~),
 #sid stretch jessie# pyqt4.qsci-dev,
-#sid stretch jessie trusty utopic vivid# python-pyspatialite,
+#sid stretch jessie trusty utopic vivid wily# python-pyspatialite,
 #sid stretch# dh-python,
  python-sip (>= 4.5.0),
  python-sip-dev (>= 4.5.0),
@@ -57,11 +60,11 @@ Build-Depends:
  spawn-fcgi, lighttpd, poppler-utils, locales, qt4-doc-html,
  libqt4-sql-sqlite
 Build-Conflicts: libqgis-dev, qgis-dev
-#sid stretch jessie vivid#Standards-Version: 3.9.6
+#sid stretch jessie vivid wily#Standards-Version: 3.9.6
 #wheezy#Standards-Version: 3.9.3
 #precise saucy trusty utopic#Standards-Version: 3.8.4
 #sid stretch jessie#X-Python-Version: >= 2.7, << 2.8
-#wheezy precise saucy trusty utopic vivid#XS-Python-Version: current
+#wheezy precise saucy trusty utopic vivid wily#XS-Python-Version: current
 Vcs-Browser: https://github.com/qgis/QGIS/
 Vcs-Git: https://github.com/qgis/QGIS.git
 Homepage: http://qgis.org/
@@ -218,7 +221,7 @@ Section: libdevel
 Depends:
  grass-dev,
  libexpat1-dev,
-#sid stretch jessie trusty utopic vivid# libgdal-dev (>= 1.10.1-0~),
+#sid stretch jessie trusty utopic vivid wily# libgdal-dev (>= 1.10.1-0~),
 #precise# libgdal-dev (>= 1.9.0) | libgdal1-dev (<< 1.9.0),
 #saucy# libgdal-dev (>= 1.9.0),
 #wheezy# libgdal1-dev,
@@ -237,6 +240,7 @@ Depends:
  libsqlite3-dev,
  python-qt4 (>= 4.1.0),
  python-qt4-dev (>= 4.1.0),
+ python-qt4-sql,
  qt4-designer,
  ${misc:Depends}
 Recommends: libqgis-customwidgets
@@ -273,7 +277,6 @@ Description: QGIS - debugging symbols
 Package: qgis-provider-grass
 Architecture: any
 Depends:
- qgis (= ${binary:Version}),
  ${shlibs:Depends},
  ${misc:Depends}
 Description: GRASS plugin for QGIS
@@ -290,8 +293,10 @@ Depends:
  qgis-provider-grass (= ${source:Version}),
  ${shlibs:Depends},
  ${misc:Depends},
-#!precise# grass-core (<< 7)
-#precise# grass (<< 7)
+#!precise# grass-core
+#precise# grass
+Replaces: qgis-provider-grass (<< 1:2.11.0+git20151002)
+Conflicts: qgis-provider-grass (<< 1:2.11.0+git20151002)
 Description: GRASS plugin for QGIS
  QGIS is a Geographic Information System (GIS) which manages, analyzes and
  display databases of geographic information.
@@ -343,6 +348,7 @@ Architecture: any
 Section: python
 Depends:
  python-qt4,
+ python-qt4-sql,
  python-sip,
  python-qgis-common (= ${source:Version}),
  python-psycopg2,
@@ -354,7 +360,7 @@ Depends:
  python-dateutil,
  python-tz,
  python-six,
-#sid stretch jessie trusty utopic vivid# python-pyspatialite,
+#sid stretch jessie trusty utopic vivid wily# python-pyspatialite,
 #jessie# liblwgeom-2.1.4,
 #stretch sid# liblwgeom-2.1.8,
  libqgispython{QGIS_ABI},
@@ -394,6 +400,7 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends:
  qgis-providers-common (= ${source:Version}),
  libqt4-sql-sqlite,
+ libqca2-plugin-ossl,
  ${shlibs:Depends},
  ${misc:Depends}
 Breaks: qgis (<= 1.6)
