@@ -1,12 +1,0 @@
-#!/bin/sh
-
-set -e
-
-if [ "$1" = "remove" ]; then
-	dpkg-divert --package qgis-provider-grass --remove --rename --divert /usr/bin/qgis.bin /usr/bin/qgis
-	dpkg-divert --package qgis-provider-grass --remove --rename --divert /usr/bin/qbrowser.bin /usr/bin/qbrowser
-fi
-
-#DEBHELPER#
-
-exit 0
