@@ -1,13 +1,0 @@
-#!/bin/sh
-
-set -e
-
-if [ "$1" = "install" -o "$1" = "upgrade" ]; then
-	dpkg-divert --package qgis-provider-grass --add --rename --divert /usr/bin/qgis.bin /usr/bin/qgis
-	dpkg-divert --package qgis-provider-grass --add --rename --divert /usr/bin/qbrowser.bin /usr/bin/qbrowser
-fi
-
-#DEBHELPER#
-
-exit 0
-
